--- a/.github/ISSUE_TEMPLATE/migration_template.yml
+++ b/.github/ISSUE_TEMPLATE/migration_template.yml
@@ -41,3 +41,12 @@ body:
       placeholder: "e.g., t_repo1"
     validations:
       required: true
+      
+  - type: dropdown
+    id: migration_level
+    attributes:
+      label: "Migration Level"
+      description: "Select if this migration is for organization-level secrets"
+      options:
+        - "Organization"
+        - "Repository"
